--- a/webapp/src/main/resources/templates/fleet/editcar.html
+++ b/webapp/src/main/resources/templates/fleet/editcar.html
@@ -106,6 +106,11 @@
                     <input type="number" min="0" step="0.01" th:field="*{amountDowngrade}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('amountDowngrade')}" th:errors="*{amountDowngrade}" class="val-error"></span>
                 </div>
+                <div th:class="${#fields.hasErrors('pictures')}? 'has-error'">
+                    <label th:for="${#ids.next('pictures')}"> <p th:text="#{car.picture}"> picture</p></label>
+                    <input type="text" th:field="*{pictures[0]}" class="form-control"/>
+                    <span th:if="${#fields.hasErrors('pictures')}" th:errors="*{pictures}" class="val-error"></span>
+                </div>
 
 
                 <br/>
