--- a/webapp/src/main/resources/templates/error.html
+++ b/webapp/src/main/resources/templates/error.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            Something went wrong, please return to the <a th:href="@{/index}">homepage</a>.
+            <span th:text="#{error.message}">Something went wrong, please return to the</span> <a th:href="@{/index}" th:text="#{error.link}">homepage</a>.
         </div>
     </div>
     <hr/>
