--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <title>RealDolmen Fleet</title>
+    <title th:text="#{fragments.head.title}">RealDolmen Fleet</title>
     <link th:href="@{/favicon.ico}" rel="shortcut icon"/>
     <link th:href="@{/css/bootstrap-3.0.3.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
@@ -25,34 +25,34 @@
         <a class="navbar-brand rdportal" href="http://portal.realdolmen.com"><span class="rd-red">R</span><span class="rd-blue">D</span> Portal</a>
 
         <ul class="nav navbar-nav headertext ">
-            <li sec:authorize="isAuthenticated()"><a th:href="@{/}">Personal Overview</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/}" th:text="#{fragments.navbar.overview}">Personal Overview</a></li>
             <li class="dropdown dropback" sec:authorize="hasRole('ROLE_FLEET')">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                   aria-expanded="false">Fleet <span class="caret"></span></a>
+                   aria-expanded="false"><span  th:text="#{fragments.navbar.fleet}">Fleet</span> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a th:href="@{/fleet/rdemployee}">Employees</a></li>
-                    <li><a th:href="@{/fleet/cars}">Our Cars</a></li>
+                    <li><a th:href="@{/fleet/rdemployee}" th:text="#{fragments.navbar.employees}">Employees</a></li>
+                    <li><a th:href="@{/fleet/cars}" th:text="#{fragments.navbar.ourcars}">Our Cars</a></li>
                     <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Orders</li>
-                    <li><a th:href="@{/fleet/allow-order}">Allow Order</a></li>
-                    <li><a th:href="@{/fleet/disallow-ordering}">Disallow Ordering</a></li>
-                    <li><a th:href="@{/fleet/confirm-order}">Confirm/Disallow Orders</a></li>
+                    <li class="dropdown-header"  th:text="#{fragments.navbar.orders}">Orders</li>
+                    <li><a th:href="@{/fleet/allow-order}" th:text="#{fragments.navbar.alloworder}">Allow Order</a></li>
+                    <li><a th:href="@{/fleet/disallow-ordering}" th:text="#{fragments.navbar.disalloworder}">Disallow Ordering</a></li>
+                    <li><a th:href="@{/fleet/confirm-order}" th:text="#{fragments.navbar.confirmorders}">Confirm/Disallow Orders</a></li>
                     <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Catalog</li>
-                    <li><a th:href="@{/fleet/caroptions}">Options</a></li>
-                    <li><a th:href="@{/fleet/packs}">Car Packs</a></li>
-                    <li><a th:href="@{/fleet/caroverview}">Cars</a></li>
+                    <li class="dropdown-header" th:text="#{fragments.navbar.catalog}">Catalog</li>
+                    <li><a th:href="@{/fleet/caroptions}" th:text="#{fragments.navbar.options}">Options</a></li>
+                    <li><a th:href="@{/fleet/packs}" th:text="#{fragments.navbar.carpacks}">Car Packs</a></li>
+                    <li><a th:href="@{/fleet/caroverview}" th:text="#{fragments.navbar.cars}">Cars</a></li>
                 </ul>
             </li>
-            <li th:if="${session.loggedInUserCanOrderNewCar}"><a th:href="@{/employees/select-car}">Ordering Car
+            <li th:if="${session.loggedInUserCanOrderNewCar}"><a th:href="@{/employees/select-car}" th:text="#{fragments.navbar.orderingavailable}">Ordering Car
                 Available!</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right headertext">
-            <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Login</a></li>
-            <li sec:authorize="isAuthenticated()"><a th:href="@{/employees/editpassword}">Edit password </a></li>
+            <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}" th:text="#{fragments.navbar.login}">Login</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/employees/editpassword}" th:text="#{fragments.navbar.editpassword}">Edit password </a></li>
             <li sec:authorize="isAuthenticated()"><p class="nav navbar-text" sec:authentication="name">
                 loggedInUserName</p></li>
-            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Log Out</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}" th:text="#{fragments.navbar.logout}">Log Out</a></li>
         </ul>
     </div>
 </div>
