--- a/webapp/src/main/resources/templates/fleet/editoptionselection.html
+++ b/webapp/src/main/resources/templates/fleet/editoptionselection.html
@@ -30,12 +30,14 @@
             <div style="float:left; width: 44%">
 
                 <h3><p th:text="#{car.basepacks}"> bse pack</p></h3>
+                <hr/>
 
                 <p id="basepack2" th:if="${car.basePack != null}" th:text="${car.basePack.name}"></p>
                 <p id="basepack"></p>
 
 
                 <h3><p th:text="#{car.optionalpacks}"> otpional pack</p></h3>
+                <hr/>
                 <table id="extrapacks">
                     <tr th:each="expack, idStat  : ${car.extraPacks}">
 
@@ -43,20 +45,21 @@
 
 
                         <td>  <a  th:onclick="'javascript:removeExtraPack(this);'"
-                                  class="btn btn-primary form-control" th:text="#{car.removepack}">remove</a> </td>
+                                  class="btn btn-danger form-control" th:text="#{car.removepack}">remove</a> </td>
 
 
                     </tr>
                 </table>
 
                 <h3><p th:text="#{car.extraposoptions}"> extra pos optios</p></h3>
+                <hr/>
                 <table id="extraoptions">
                     <tr th:each="opt, idStat  : ${car.extraOptions}">
 
                         <td th:text="${opt.name}">1</td>
 
                         <td>  <a  th:onclick="'javascript:removeExtraOption(this);'"
-                                  class="btn btn-primary form-control" th:text="#{car.removeoption}">remove</a> </td>
+                                  class="btn btn-danger form-control" th:text="#{car.removeoption}">remove</a> </td>
 
 
                     </tr>
@@ -91,10 +94,10 @@
                         <td>€ <span th:text="${#numbers.formatDecimal(pack.price,1,2)}"></span></td>
 
                         <td>  <a th:onclick="'javascript:setBasePack(\'' + ${pack.id} + '\',\'' + ${pack.name}+ '\');'"
-                                 class="btn btn-primary form-control" th:text="#{car.setbasepack}">add </a> </td>
+                                 class="btn btn-success form-control" th:text="#{car.setbasepack}">add </a> </td>
 
                         <td>  <a th:onclick="'javascript:addExtraPack(\'' + ${pack.id} + '\',\'' + ${pack.name}+ '\');'"
-                                 class="btn btn-primary form-control" th:text="#{car.addextrapack}">add </a> </td>
+                                 class="btn btn-success form-control" th:text="#{car.addextrapack}">add </a> </td>
 
 
 
@@ -131,7 +134,7 @@
 
                         <td  th:id="'a\'' + ${idStat.index} + '\''" >  <a
                                  th:onclick="'javascript:addExtraOptionId( \'' + ${option.id} +  '\',\'' + ${idStat.index} +  '\');'"
-                                 class="btn btn-primary form-control" th:text="#{car.addextrapack}">add </a> </td>
+                                 class="btn btn-success form-control" th:text="#{car.addextrapack}">add </a> </td>
 
 
 
@@ -256,7 +259,7 @@
                 a.onclick = function() {
                     addExtraOption(this, rowData["id"]);
                 }
-                a.className = "btn btn-primary form-control";
+                a.className = "btn btn-success form-control";
 
 
 
@@ -316,7 +319,7 @@
             a.onclick = function() {
                 removeExtraOption(this);
             }
-            a.className = "btn btn-primary form-control";
+            a.className = "btn btn-danger form-control";
 
             newCell2.appendChild(a);
 
@@ -374,7 +377,7 @@
             a.onclick = function() {
                 removeExtraOption(this);
             }
-            a.className = "btn btn-primary form-control";
+            a.className = "btn btn-danger form-control";
 
             newCell2.appendChild(a);
 
@@ -445,7 +448,7 @@
             a.onclick = function() {
                 removeExtraPack(this);
             }
-            a.className = "btn btn-primary form-control";
+            a.className = "btn btn-danger form-control";
 
 
             var newText2  = document.createTextNode(id)
