changed some button colors

--- a/webapp/src/main/resources/templates/employees/editpassword.html
+++ b/webapp/src/main/resources/templates/employees/editpassword.html
@@ -11,7 +11,7 @@
 
 
 
-            <form method="POST" th:object="${editPassword}">
+            <form method="POST" th:object="${editPassword}" style="width: 50%">
                 <div th:class="${#fields.hasErrors('existingPassword')}? 'has-error'">
                     <label th:for="${#ids.next('existingPassword')}"> <p th:text="#{employee.oldpassword}"> old password </p></label>
                     <input type="password" th:field="*{existingPassword}" class="form-control"/>
