--- a/webapp/src/main/resources/templates/fleet/confirm-order-detail.html
+++ b/webapp/src/main/resources/templates/fleet/confirm-order-detail.html
@@ -30,7 +30,7 @@
 
                 <div id="disallowOrder">
                     <input type="hidden" id="orderId" name="orderId" th:value="${confirmedOrderDTO.getOrderId()}"/>
-                    <input type="submit" value="Disallow Order" class="btn btn-primary form-control"/>
+                    <input type="submit" value="Disallow Order" class="btn btn-danger form-control"/>
                 </div>
             </form>
 
