--- a/webapp/src/main/resources/templates/fleet/allow-order.html
+++ b/webapp/src/main/resources/templates/fleet/allow-order.html
@@ -43,7 +43,7 @@
                         <td>
                             <form method="post" th:action="@{allow-order}">
                                 <input type="hidden" name="email" th:value="${employee.email}"/>
-                                <button type="submit" class="btn btn-primary form-control"><p th:text="#{order.alloworder}"> Allow Order  </p> </button>
+                                <button type="submit" class="btn btn-success form-control"><p th:text="#{order.alloworder}"> Allow Order  </p> </button>
 
                             </form>
                         </td>
